--- a/src/styleguide.scss
+++ b/src/styleguide.scss
@@ -14,3 +14,9 @@ body {
   box-shadow: inset 0 0 0 1px $c-dark;
   margin: 1em;
 }
+
+blockquote {
+  background-color: lightgrey;
+  border-left: .2em solid darkgrey;
+  padding: .5em 1em;
+}
