--- a/_sass/components/header.scss
+++ b/_sass/components/header.scss
@@ -2,8 +2,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 2em;
-  padding: 0 1em;
+  padding: 1em;
 
   img {
     height: 2em;
