--- a/_sass/components/poll.scss
+++ b/_sass/components/poll.scss
@@ -1,5 +1,18 @@
 .poll {
+  max-width: 30em;
+  margin: 0 auto;
+  padding: 1em;
+
   &--option {
+    display: flex;
+    flex-direction: column;
+    margin: 1em 0;
+
+    label {
+      font-size: .8em;
+      margin-bottom: .5em;
+    }
+
     input {
       font: inherit;
     }
