poll title as input because that's easier

--- a/_sass/components/poll.scss
+++ b/_sass/components/poll.scss
@@ -23,11 +23,13 @@
   }
 
   &--title {
-    &[contenteditable] {
-      border: $s-hair solid currentColor;
-      padding: $s-mini;
-      border-radius: $s-mini;
-    }
+    font-size: 1.75em;
+
+    // &[contenteditable] {
+    //   border: $s-hair solid currentColor;
+    //   padding: $s-mini;
+    //   border-radius: $s-mini;
+    // }
   }
 
   &--advanced {
