change colors of error and success

--- a/_sass/components/message.scss
+++ b/_sass/components/message.scss
@@ -1,7 +1,7 @@
 .error {
   font-size: .8em;
   margin-top: $s-small;
-  color: $c-accent;
+  color: $red-dark;
 }
 
 .message {
@@ -13,14 +13,14 @@
   &.error {
     font-size: inherit;
     margin: $s-small;
-    color: $c-accent-dark;
-    background-color: $c-accent;
-    border-color: $c-accent-dark;
+    color: $red-dark;
+    background-color: $red;
+    border-color: $red-dark;
   }
 
   &.success {
-    color: #3c763d;
-    background-color: #dff0d8;
-    border-color: #d6e9c6;
+    color: $green-dark;
+    background-color: $green-light;
+    border-color: $green-dark;
   }
 }
