change colour variables

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -9,6 +9,14 @@ $c-accent: #FD6C6C;
 $c-accent-dark: darken($c-accent, 50%);
 $c-dark: #232323;
 
+// colours second version
+$blue: #07092E;
+$green: #4AA07A;
+$green-dark: #367559;
+$green-light: #8BC2AA;
+$red: #B94F4F;
+$red-dark: #5C2828;
+
 // spacing
 $s-hair: 1px;
 $s-mini: .2em;
