--- a/_sass/components/message.scss
+++ b/_sass/components/message.scss
@@ -19,7 +19,7 @@
   }
 
   &.success {
-    color: $green-dark;
+    color: $c-accent-dark;
     background-color: $c-accent-light;
     border-color: $c-accent-dark;
   }
