--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -12,6 +12,7 @@ html {
 
 body {
   margin: 0;
+  background-color: $c-background;
 }
 
 a {
@@ -32,6 +33,6 @@ main {
   max-width: 60em;
   margin: 0 auto;
   padding: 0 1em;
-  background-color: $blue;
+  background-color: $c-background;
   color: $c-accent;
 }
