--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -3,16 +3,18 @@ $f-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu", "Can
 $f-monospace: Menlo, monospace;
 
 // colours second version
-$c-background: #07092E;
-$c-accent: #4AA07A;
-$c-accent-dark: #367559;
-$c-accent-light: #8BC2AA;
+$c-background: #FBFBFB;
+$c-header: #FFFFFF;
+$c-accent: #2660A4;
+$c-accent-dark: #869ACC;
+$c-accent-light: #CCDAFB;
+$c-border-input: #BDC4C9;
 $c-error: #B94F4F;
 $c-error-dark: #5C2828;
 
 // spacing
-$s-hair: 1px;
-$s-mini: .2em;
-$s-small: .5em;
+$s-hair: .1em;
+$s-mini: .3em;
+$s-small: .3em;
 $s-medium: 1em;
 $s-large: 2em;
