--- a/_sass/components/poll.scss
+++ b/_sass/components/poll.scss
@@ -13,7 +13,7 @@
       margin-bottom: .5em;
     }
 
-    input {
+    input:not([type=submit]) {
       font: inherit;
       border-radius: $s-mini;
       padding-left: $s-small;
