--- a/_sass/__components__.scss
+++ b/_sass/__components__.scss
@@ -2,4 +2,5 @@
   'components/header',
   'components/button',
   'components/poll',
-  'components/message';
+  'components/message',
+  'components/poll-by-user';
