work without baseurl

--- a/_layouts/component.html
+++ b/_layouts/component.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <main>
-  <a href="{{site.baseurl}}/">back</a>
+  <a href="/">back</a>
   <h1>{{page.title}}</h1>
   {{content}}
 </main>
