--- a/_sass/__components__.scss
+++ b/_sass/__components__.scss
@@ -3,4 +3,7 @@
   'components/button',
   'components/poll',
   'components/message',
-  'components/poll-by-user';
+  'components/poll-by-user',
+  'components/social',
+  'components/account',
+  'components/vote';
