edit semi colon

--- a/_sass/__components__.scss
+++ b/_sass/__components__.scss
@@ -3,7 +3,7 @@
   'components/button',
   'components/poll',
   'components/message',
-  'components/cta-list';
+  'components/cta-list',
   'components/social',
   'components/account',
   'components/vote';
