fix social component
todo: append class to the copy button :smile:

--- a/_sass/__components__.scss
+++ b/_sass/__components__.scss
@@ -3,4 +3,5 @@
   'components/button',
   'components/poll',
   'components/message',
-  'components/cta-list';
+  'components/cta-list',
+  'components/social';
