--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -9,6 +9,7 @@ $c-accent: #2660A4;
 $c-accent-dark: #869ACC;
 $c-accent-light: #CCDAFB;
 $c-border-input: #BDC4C9;
+$c-border-input-light: #E6E6E6;
 $c-error: #B94F4F;
 $c-error-dark: #5C2828;
 
@@ -17,4 +18,5 @@ $s-hair: .1em;
 $s-mini: .4em;
 $s-small: .5em;
 $s-medium: 1em;
+$s-medium-large: 1.5em;
 $s-large: 2em;
