add styling for #results
this is pretty hard-coded but it's svg stuff so 🙌🏼

if this is merged the style tag can be removed in /results

--- a/_sass/__components__.scss
+++ b/_sass/__components__.scss
@@ -7,4 +7,5 @@
 	'components/poll-list',
 	'components/social',
 	'components/account',
-	'components/vote';
+	'components/vote',
+	'compontents/results';
