--- a/_sass/components/results.scss
+++ b/_sass/components/results.scss
@@ -24,7 +24,7 @@
 		display: none;
 		width: auto;
 		height: auto;
-		background: none repeat scroll 0 0 $c-background:;
+		background: none repeat scroll 0 0 $c-background;
 		border: 0 none;
 		border-radius: $s-small;
 		box-shadow: -$s-mini $s-mini 15px #888;
