add flavicon tags to styleguide too :o:

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,20 @@ layout: compress
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="apple-touch-icon" sizes="180x180" href="/src/img/icon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="/src/img/icon/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/src/img/icon/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="/src/img/icon/manifest.json">
+  <link rel="mask-icon" href="/src/img/icon/safari-pinned-tab.svg" color="#2660a4">
+  <link rel="shortcut icon" href="/src/img/icon/favicon.ico">
+  <meta name="apple-mobile-web-app-title" content="Pollistics">
+  <meta name="application-name" content="Pollistics">
+  <meta name="msapplication-config" content="/src/img/icon/browserconfig.xml">
+  <meta name="theme-color" content="#fbfbfb">
   <title>{% if page.title %}{{page.title}}{% else %}Pollistics styleguide{% endif %}</title>
   <link rel="stylesheet" href="/src/main.css">
   <link rel="stylesheet" href="/src/styleguide.css">
