only bottom margin on header
hot fix :fire: fix this fast :firetruck:

--- a/_sass/components/header.scss
+++ b/_sass/components/header.scss
@@ -5,7 +5,7 @@ header {
 	align-items: center;
 	background-color: $c-header;
 	padding: $s-medium;
-	margin: $s-medium;
+	margin-bottom: $s-medium;
 	box-shadow: 0 -$s-medium $s-medium $s-medium #b1b1b1;
 
 	@media (max-width: 560px) {
