--- a/_sass/components/header.scss
+++ b/_sass/components/header.scss
@@ -6,7 +6,7 @@ header {
 	background-color: $c-header;
 	padding: $s-medium;
 	margin-bottom: $s-medium;
-	box-shadow: 0 -$s-medium $s-medium $s-medium #b1b1b1;
+	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
 	@media (max-width: 560px) {
 		flex-direction: column;
