--- a/_sass/components/vote.scss
+++ b/_sass/components/vote.scss
@@ -24,7 +24,7 @@
 			user-select: none;
 		}
 
-		label::before, label::after {
+		label:before, label:after {
 			content: '';
 			display: block;
 			width: $s-medium;
@@ -38,21 +38,21 @@
 			transform: translateY(-50%);
 		}
 
-		label::before {
+		label:before {
 			left: 0;
 			border: $s-hair solid $c-border-input-light;
 			box-shadow: inset $s-hair $s-hair rgba(0, 0, 0, 0.03);
 			border-radius: 50%;
 		}
 
-		label::after {
+		label:after {
 			left: 3px;
-			background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path fill="none" stroke="#5D8CE7" stroke-width="3" stroke-miterlimit="10" d="M2 6l4 4 8-8"/></svg>') no-repeat center center;
-			display: none;
+			background: url("data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='none' stroke='#5D8CE7' stroke-width='3' stroke-miterlimit='10' d='M2 6l4 4 8-8'/%3E%3C/svg%3E") no-repeat center center;
+			opacity: 0;
 		}
 
-		input[type=radio]:checked + label::after {
-			display: block;
+		input[type=radio]:checked + label:after {
+			opacity: 1;
 		}
 
 		input[type=text], &--item {
